# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  default_config.txt  dikjstra.py  main.py  maze_generator.py  mazegen.py  parsing_config.py  pyproject.toml  render.py  requirements.txt
mazegen/: __init__.py  maze_generator.py
