[build-system]
requires = ["setuptools>=45", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generation and solving project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "bclairot"},
    {name = "ndi-tull"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen"]